--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://api.fontshare.com/v2/css?f[]=general-sans@400,500,600,700&display=swap" 
       rel="stylesheet"
     />
-    <title>Dev Server</title>
+    <title>Portfolio Website</title>
   </head>
   <body>
     <header class="header container">
