--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       href="https://api.fontshare.com/v2/css?f[]=general-sans@400,500,600,700&display=swap" 
       rel="stylesheet"
     />
+    <meta name="description" content="My Portfolio Website">
+    <meta name="keywords" content="web design, html, css, js"> 
     <title>Portfolio Website</title>
   </head>
   <body>
@@ -34,7 +36,10 @@
           </li>
           <li class="header__line"></li>
           <li>
-            <button id="theme-toggle" class="header__sun">
+            <button 
+              aria-label="theme-toggle btn" 
+              id="theme-toggle" 
+              class="header__sun">
               <svg 
                 xmlns="http://www.w3.org/2000/svg" 
                 viewBox="0 0 24 24" 
@@ -53,7 +58,7 @@
               target="_blank">Resume</a>
           </li>
         </ul>
-        <button class="header__bars">
+        <button aria-label="mobile nav button" class="header__bars">
           <svg 
             xmlns="http://www.w3.org/2000/svg" 
             viewBox="0 0 24 24" 
@@ -92,7 +97,7 @@
           </li>
           <li class="mobile-nav__link-line"></li>
           <li>
-            <button id="theme-toggle" class="mobile-nav__sun">
+            <button aria-label="theme-toggle btn" id="theme-toggle" class="mobile-nav__sun">
               <svg 
                 xmlns="http://www.w3.org/2000/svg" 
                 viewBox="0 0 24 24" 
