Added year 3 to year in review

--- a/index.html
+++ b/index.html
@@ -284,6 +284,30 @@
           <p class="review__description">By getting to know these interns and making the effort to take the 15 minute walk to the cafeteria. I was able to form great friendships. As my weekdays became more occupied, time went by faster. There were outings we planned on weekends that had us road tripping across South and North Carolina. We also went hiking and visited beautiful mountains which looked beautiful as the leaves were already changing color.</p>
           <p class="review__description">From these involvements, I had a great first co-op rotation experience. I expanded my professional skills and networking/social skills. The networking being a key factor to my success, is something that I will continue to build upon to put myself in a position where I could see myself staying at BMW or start putting in the work to find a co-op at another company of my interest.</p>
         </div>
+        <div class="review__wrapper">
+          <h2 class="review__title">Year 3: 2024/25</h2>
+          <a class="review__link" href="#">
+            <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              viewBox="0 0 24 24" 
+              fill="currentColor"
+            >
+            <path 
+              d="M9.195 18.44c1.25.714 2.805-.189 2.805-1.629v-2.34l6.945 3.968c1.25.715 2.805-.188 2.805-1.628V8.69c0-1.44-1.555-2.343-2.805-1.628L12 11.029v-2.34c0-1.44-1.555-2.343-2.805-1.628l-7.108 4.061c-1.26.72-1.26 2.536 0 3.256l7.108 4.061Z"
+            />
+            </svg>        
+          </a>
+        </div>
+        <div class="review__child">
+          <p class="review__description">My third year, I hit the ground running.</p>
+          <p class="review__description">For starters, during the Fall semester, I was able to volunteer for a variety of different organizations. I was able to volunteer for Hispanic Volunteer Day with Latinx en Accion (LEA) at Roberts Academy. I got to work on clearing a park nearby and got to meet many new friends. I also had the opportunity to volunteer for iSpace Day and Fall Reading Day of Service at the Civic Garden Center. It was nice to volunteer again and contribute to the local community as it is something that has been ingrained in me at a young age.</p>
+          <p class="review__description">That being said, I probably had the best semester of school up to this point. All the classes were interesting and still being able to be involved in student organizations is a nice plus. I was able to really dedicate myself to my studies and I made it onto the Dean’s List. Which became a nice incentive for me to continue studying just as hard.</p>
+          <p class="review__description">As for co-ops, my appreciation for the program has only grown. I have been able to build real lasting friendships with people from across the country and internationally. Working for BMW for my second rotation was really fun. While the ridiculously hot and humid weather did wonders on my car, getting to go to Charleston with friends to explore the city and the beach was a nice addition to working in South Carolina. The work I was able to do was just as substantial and key in expanding my knowledge of automotive manufacturing.</p>
+        </div>
+        <div class="review__child">
+          <p class="review__description">For my third co-op rotation, I decided to make a change. I worked at Chamberlain Group in Chicago as a Computer Science Co-op. This was more aligned to my interests. I was able to work at a company where as interns, we were given the opportunity to contribute creatively and innovatively to the company. I got to work with other interns, who happened to also be from the UC. But it introduced a new challenge. The other interns, apart from one other who is an electrical engineer, were DAAP students in Industrial Design and UI/UX.</p>
+          <p class="review__description">This presented an opportunity for me to work with people outside of engineering. Which was exciting and intimidating at the same time. The project presented to us to work on meant creating a product from scratch and taking all the necessary steps to properly develop the product idea. This meant that I got to research, plan, and implement the product alongside the others. Working with Industrial Designers and UI/UX meant that they were able to challenge me with their ideas when I had to make it a reality when programming it. I also learned how to program with Kotlin for Android apps. I feel like this co-op really pushed me to be a better programmer and collaborator, which I am grateful for.</p>
+        </div>
       </section>
       <section id="honors" class="honors container section">
         <h2 class="honors__title">Honors Experiences</h2>
