Adding Honors Experience 3

--- a/index.html
+++ b/index.html
@@ -358,6 +358,27 @@
               class="btn work__project-btn" 
               href="https://patel6p5.itch.io/internatura-the-game" target="_blank">Website</a>
           </div>
+          <!-- Experience 3 -->
+          <h3 class="honors__project-title">Building a Gaming PC</h3>
+          <div class="honors__img-wrapper honors__image3">
+            <img 
+            class="lazy loading"
+            src="https://fakeimg.pl/526"
+            data-src="/pcbuilder.jpg" 
+            alt="PC Part Picker website">
+          </div>
+          <div class="honors__experience honors__content3">
+            <h3 class="honors__project-subtitle"> Building a Gaming PC</h3>
+            <p class="honors__project-description1">
+              For my Self-Designed Experience, Building My Own PC, I immersed myself in the world of computer hardware, moving from software development to understanding the physical machine. This project involved weeks of meticulous research into components like the CPU, GPU, and motherboard, comparing benchmarks to ensure compatibility and performance synergy. The process was a deep dive into practical engineering, teaching me to design a balanced system focused on optimal thermals and stable power delivery. I learned the critical importance of planning and patience, especially when troubleshooting a system that wouldn't boot. Which was a challenge that required methodical problem-solving to diagnose a simple RAM seating issue.
+            </p>
+            <p class="honors__project-description2">
+              This experience fundamentally demystified the hardware that powers the software I code, giving me a holistic understanding of the technology stack. It has empowered me to think more critically about system efficiency and how my software interacts with the machine, bridging a key gap in my technical knowledge. The sample work I chose is a photo of the PC Part Picker build. I selected this because it represents the culmination of my research, planning, and hands-on effort. More than just a final product, it serves as a tangible reminder that complex challenges can be broken down and conquered step-by-step.
+            </p>
+            <a 
+              class="btn work__project-btn" 
+              href="https://pcpartpicker.com/list/HcPBC8" target="_blank">PC Picker</a>
+          </div>
         </div>
       </section>
       <section id="involvement" class="involvement container section">
