experience 4 added. missing link left

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
         <div class="about__content">
           <h2 class="about__title">About</h2>
           <p class="about__description">
-            I am a third-year <strong>Computer Science</strong> major with a minor in <strong>French</strong>. I love learning languages, especially romance languages. I'm fluent in Spanish and I want to learn Italian and Portuguese.
+            I am a fourth-year <strong>Computer Science</strong> major with a minor in <strong>French</strong>. I love learning languages, especially romance languages. I'm fluent in Spanish and I want to learn Italian and Portuguese.
           </p>
           <p class="about__description">
-            While my hometown is technically Goshen, Ohio. I am fortunate enough to have lived in Mexico, Canada, St. Louis (MO), Greer (SC), and Chicago (IL). My love of travelling stems from those circumstances and <strong>I aspire to one day work internationally</strong>.
+            While my hometown is technically Goshen, Ohio. I am fortunate enough to have lived in Mexico, Canada, St. Louis (MO), Greer (SC), Chicago (IL), Cocoa Beach (FL). My love of travelling stems from those circumstances and <strong>I aspire to one day work internationally</strong>.
           </p>
           <hr class="about__hr">
           <h3 class="about__subtitle">Skills</h3>
@@ -379,6 +379,29 @@
               class="btn work__project-btn" 
               href="https://pcpartpicker.com/list/HcPBC8" target="_blank">PC Picker</a>
           </div>
+          <!-- Experience 4 -->
+          <h3
+            class="honors__project-title">Spanish Cultural Immersion</h3>
+          <div class="honors__img-wrapper honors__image4">
+            <img 
+            class="lazy loading" 
+            src="https://fakeimg.pl/526"
+            data-src="/madrid.jpg" 
+            alt="Madrid Spain">
+          </div>
+          <div class="honors__experience honors__content4">
+            <h3 class="honors__project-subtitle"> Spanish Cultural Immersion</h3>
+            <p class="honors__project-description1">
+              For my Self-Designed Experience, Spanish Cultural Immersion, I had the privilege of getting to travel to different parts of Spain. This entailed participating in the festivities leading up to the holidays. Namely Christmas. I spent the majority of my trip in the southernmost region of Andalucia. I was exposed to the delicious seafood cuisine in Conil de la Frontera and other cities and towns. Every morning for breakfast I would have the classic salmorejo with a slice of bread and jamón. This simple recipe was my go to and I have been making salmorejo every week since I've been back.
+            </p>
+            <p class="honors__project-description2">
+              I was very fortunate that I got to experience a different country's culture at an immersed level. From simple language barriers due to accents (and really fast speakers) and historical sites and museums, I was able to enjoy the differences between my culture and the culture in the Andalucian region. It made for a very exciting trip because I got to learn about others and their customs. The influence from the Moors and Gitanos was also very glaring compared to Madrid. While their influence in the Spanish language is apparent, music wise flamenco is still an echo of the footprint they left. It makes me wonder about how those influences might've also reached parts of Latin America. It only invigorates me to learn more about the culture within Spain.
+            </p>
+            <a 
+              class="btn work__project-btn" 
+              href="" target="_blank">Reflection</a>
+          </div>
+          <!-- End of Experiences -->
         </div>
       </section>
       <section id="involvement" class="involvement container section">
